// Copyright (C) 2024, Ava Labs, Inc. All rights reserved.
// See the file LICENSE for licensing terms.

syntax = "proto3";

package dsmr;

option go_package = "github.com/ava-labs/hypersdk/proto/pb/dsmr";

message GetChunkRequest {
  bytes chunk_ref = 1;
}

message GetChunkResponse {
  bytes chunk = 1;
}

message ChunkCertificateGossip {
  bytes chunk_certificate = 1;
}
