// Copyright (C) 2024, Ava Labs, Inc. All rights reserved.
// See the file LICENSE for licensing terms.

syntax = "proto3";

package subscriber;

import "google/protobuf/empty.proto";

option go_package = ".";

service ExternalSubscriber {
    rpc ProcessBlock (BlockRequest) returns (google.protobuf.Empty);
    rpc Initialize (InitRequest) returns (google.protobuf.Empty);
}

message BlockRequest {
    bytes block_data = 1;
    bytes results = 2;
}

message InitRequest {
    uint32 networkID = 1;
    bytes chainID = 2;
    bytes genesis = 3; 
}